# E-commerce

./: .env.example  CONFIG.md  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  explainers.py  main.py  models.py  pdf_utils.py  redaction.py  schemas.py
app/accounting/: __init__.py  engine.py
app/parsing/: pipeline.py
app/rendering/: report.py
app/templates/: report.html.j2
data/: codes.json  glossary.json
pdfplumber/: __init__.py
pydantic/: __init__.py
pydantic_settings/: __init__.py
pypdf/: __init__.py
rapidfuzz/: __init__.py  process.py
tests/: test_engine.py  test_parser.py  test_redaction.py
